@@ -71,7 +71,5 @@
 	<string>Sigl</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
-	<key>LSRequiresCarbon</key>
-	<true/>
 </dict>
 </plist>
